crates/parser/tests/parse/global-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..94
  MODULE@0..93
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_GLOBAL@10..21
      L_PAREN@10..11 "("
      KEYWORD@11..17 "global"
      WHITESPACE@17..18 " "
      ERROR@18..19 "("
      ERROR@19..20 ")"
      R_PAREN@20..21 ")"
    WHITESPACE@21..24 "\n  "
    MODULE_FIELD_GLOBAL@24..39
      L_PAREN@24..25 "("
      KEYWORD@25..31 "global"
      WHITESPACE@31..32 " "
      GLOBAL_TYPE@32..35
        NUM_TYPE@32..35
          TYPE_KEYWORD@32..35 "i32"
      WHITESPACE@35..36 " "
      ERROR@36..37 "("
      ERROR@37..38 ")"
      R_PAREN@38..39 ")"
    WHITESPACE@39..42 "\n  "
    MODULE_FIELD_GLOBAL@42..63
      L_PAREN@42..43 "("
      KEYWORD@43..49 "global"
      WHITESPACE@49..50 " "
      GLOBAL_TYPE@50..59
        L_PAREN@50..51 "("
        KEYWORD@51..54 "mut"
        WHITESPACE@54..55 " "
        NUM_TYPE@55..58
          TYPE_KEYWORD@55..58 "i32"
        R_PAREN@58..59 ")"
      WHITESPACE@59..60 " "
      ERROR@60..61 "("
      ERROR@61..62 ")"
      R_PAREN@62..63 ")"
    WHITESPACE@63..66 "\n  "
    MODULE_FIELD_GLOBAL@66..74
      L_PAREN@66..67 "("
      KEYWORD@67..73 "global"
      R_PAREN@73..74 ")"
    WHITESPACE@74..77 "\n  "
    MODULE_FIELD_GLOBAL@77..91
      L_PAREN@77..78 "("
      KEYWORD@78..84 "global"
      WHITESPACE@84..85 " "
      GLOBAL_TYPE@85..90
        L_PAREN@85..86 "("
        KEYWORD@86..89 "mut"
        R_PAREN@89..90 ")"
      R_PAREN@90..91 ")"
    WHITESPACE@91..92 "\n"
    R_PAREN@92..93 ")"
  WHITESPACE@93..94 "\n"

error: unexpected token
  ┌─ global-malformed.wat:2:12
  │
2 │   (global ())
  │            ^

error: unexpected token
  ┌─ global-malformed.wat:3:16
  │
3 │   (global i32 ())
  │                ^

error: unexpected token
  ┌─ global-malformed.wat:4:22
  │
4 │   (global (mut i32) ())
  │                      ^

error: expected global type
  ┌─ global-malformed.wat:5:10
  │
5 │   (global)
  │          ^

error: expected value type
  ┌─ global-malformed.wat:6:15
  │
6 │   (global (mut))
  │               ^
